--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_dashboard">Chat</string>
     <string name="title_perfil">Perfil</string>
     <string name="profile_image_desc">Foto de perfil</string>
+    <string name="editar_perfil">Editar Perfil</string>
 </resources>
